added example for EPS and recurring payment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,30 @@
 #eshop backend app port
 server.port=8080
-#elactic engine username
-ee.username=70000-APIDEMO-CARD
-#elactic engine password
-ee.password=ohysS0-dvfMx
-#wirecard payment page merchant id
-ee.maid=7a6dd74f-06ab-4f3f-a864-adc52687270a
-#wirecard payment page merchant secret key
-ee.secretkey=a8c3fce6-8df7-4fd6-a1fd-62fa229c5e55
-#rest service endpoint for register payment
-wpp.register.endpoint=https://wpp-test.wirecard.com/api/payment/register
+#rest service base endpoint
+wpp.gui.flow.base.endpoint=https://wpp-test.wirecard.com/api/payment
+#rest api base endpoint
+wpp.rest.api.base.endpoint=https://api-test.wirecard.com/engine/rest/payments
+
 #origin location for SEAMLESS mode and EMBEDDED integration
 frame.ancestor=http://localhost:${server.port}
 
+#EPS credentials
+#elactic engine username
+ee.eps.username=16390-testing
+#elactic engine password
+ee.eps.password=3!3013=D3fD8X7
+#wirecard payment page merchant id
+ee.eps.maid=1f629760-1a66-4f83-a6b4-6a35620b4a6d
+#wirecard payment page merchant secret key
+ee.eps.secretkey=20c6a95c-e39b-4e6a-971f-52cfb347d359
 
-
+#CC credentials
+#elactic engine username
+ee.cc.username=70000-APIDEMO-CARD
+#elactic engine password
+ee.cc.password=ohysS0-dvfMx
+#wirecard payment page merchant id
+ee.cc.maid=7a6dd74f-06ab-4f3f-a864-adc52687270a
+#wirecard payment page merchant secret key
+ee.cc.secretkey=a8c3fce6-8df7-4fd6-a1fd-62fa229c5e55
+# Testcard: 4200000000000018 CVV 018
